feat: Completed Game with play-again stretch goal

--- a/src/styles.css
+++ b/src/styles.css
@@ -185,6 +185,12 @@ h1 {
   color: white;
 }
 
+.play-again {
+  margin-top: 1rem;
+  padding: 0.5em 1em;
+  border: 2px solid white;
+}
+
 .visually-hidden {
   position: absolute;
   overflow: hidden;
